add index = False

--- a/sandbox.ipynb
+++ b/sandbox.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1583,6 +1583,343 @@
     "MRT_sum_with_coord = pd.merge(MRT_newyear_data, MRT_first_coord, left_on= '進站', right_on='exit', how = 'left').sort_values('時段', ascending=True)\n",
     "\n",
     "MRT_sum_with_coord.to_csv('./DATA/MRT_sum_with_coord.csv', index = False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>year</th>\n",
+       "      <th>日期</th>\n",
+       "      <th>時段</th>\n",
+       "      <th>進站</th>\n",
+       "      <th>人次</th>\n",
+       "      <th>exit</th>\n",
+       "      <th>經度</th>\n",
+       "      <th>緯度</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2023</td>\n",
+       "      <td>2022-12-31</td>\n",
+       "      <td>0</td>\n",
+       "      <td>北門</td>\n",
+       "      <td>168</td>\n",
+       "      <td>北門</td>\n",
+       "      <td>121.509986</td>\n",
+       "      <td>25.048861</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2022</td>\n",
+       "      <td>2021-12-31</td>\n",
+       "      <td>0</td>\n",
+       "      <td>南港</td>\n",
+       "      <td>223</td>\n",
+       "      <td>南港</td>\n",
+       "      <td>121.606357</td>\n",
+       "      <td>25.051911</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2022</td>\n",
+       "      <td>2021-12-31</td>\n",
+       "      <td>0</td>\n",
+       "      <td>南勢角</td>\n",
+       "      <td>149</td>\n",
+       "      <td>南勢角</td>\n",
+       "      <td>121.507876</td>\n",
+       "      <td>24.990529</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2022</td>\n",
+       "      <td>2021-12-31</td>\n",
+       "      <td>0</td>\n",
+       "      <td>南京復興</td>\n",
+       "      <td>394</td>\n",
+       "      <td>南京復興</td>\n",
+       "      <td>121.542121</td>\n",
+       "      <td>25.052625</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2022</td>\n",
+       "      <td>2021-12-31</td>\n",
+       "      <td>0</td>\n",
+       "      <td>南京三民</td>\n",
+       "      <td>644</td>\n",
+       "      <td>南京三民</td>\n",
+       "      <td>121.563196</td>\n",
+       "      <td>25.051545</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6363</th>\n",
+       "      <td>2019</td>\n",
+       "      <td>2019-12-31</td>\n",
+       "      <td>23</td>\n",
+       "      <td>永寧</td>\n",
+       "      <td>394</td>\n",
+       "      <td>永寧</td>\n",
+       "      <td>121.435563</td>\n",
+       "      <td>24.966641</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6364</th>\n",
+       "      <td>2019</td>\n",
+       "      <td>2019-12-31</td>\n",
+       "      <td>23</td>\n",
+       "      <td>永春</td>\n",
+       "      <td>715</td>\n",
+       "      <td>永春</td>\n",
+       "      <td>121.575120</td>\n",
+       "      <td>25.040995</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6365</th>\n",
+       "      <td>2019</td>\n",
+       "      <td>2019-12-31</td>\n",
+       "      <td>23</td>\n",
+       "      <td>江子翠</td>\n",
+       "      <td>824</td>\n",
+       "      <td>江子翠</td>\n",
+       "      <td>121.471914</td>\n",
+       "      <td>25.030298</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6366</th>\n",
+       "      <td>2019</td>\n",
+       "      <td>2019-12-31</td>\n",
+       "      <td>23</td>\n",
+       "      <td>古亭</td>\n",
+       "      <td>1267</td>\n",
+       "      <td>古亭</td>\n",
+       "      <td>121.522973</td>\n",
+       "      <td>25.025976</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6367</th>\n",
+       "      <td>2019</td>\n",
+       "      <td>2019-12-31</td>\n",
+       "      <td>23</td>\n",
+       "      <td>南港</td>\n",
+       "      <td>1219</td>\n",
+       "      <td>南港</td>\n",
+       "      <td>121.606357</td>\n",
+       "      <td>25.051911</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>6368 rows × 8 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      year          日期  時段    進站    人次  exit          經度         緯度\n",
+       "0     2023  2022-12-31   0    北門   168    北門  121.509986  25.048861\n",
+       "1     2022  2021-12-31   0    南港   223    南港  121.606357  25.051911\n",
+       "2     2022  2021-12-31   0   南勢角   149   南勢角  121.507876  24.990529\n",
+       "3     2022  2021-12-31   0  南京復興   394  南京復興  121.542121  25.052625\n",
+       "4     2022  2021-12-31   0  南京三民   644  南京三民  121.563196  25.051545\n",
+       "...    ...         ...  ..   ...   ...   ...         ...        ...\n",
+       "6363  2019  2019-12-31  23    永寧   394    永寧  121.435563  24.966641\n",
+       "6364  2019  2019-12-31  23    永春   715    永春  121.575120  25.040995\n",
+       "6365  2019  2019-12-31  23   江子翠   824   江子翠  121.471914  25.030298\n",
+       "6366  2019  2019-12-31  23    古亭  1267    古亭  121.522973  25.025976\n",
+       "6367  2019  2019-12-31  23    南港  1219    南港  121.606357  25.051911\n",
+       "\n",
+       "[6368 rows x 8 columns]"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "MRT_sum_with_coord = pd.read_csv('./DATA/MRT_sum_with_coord_contain_22-05.csv')\n",
+    "MRT_sum_with_coord"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>year</th>\n",
+       "      <th>日期</th>\n",
+       "      <th>時段</th>\n",
+       "      <th>進站</th>\n",
+       "      <th>人次</th>\n",
+       "      <th>exit</th>\n",
+       "      <th>經度</th>\n",
+       "      <th>緯度</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>4809</th>\n",
+       "      <td>2021</td>\n",
+       "      <td>2020-12-31</td>\n",
+       "      <td>22</td>\n",
+       "      <td>公館</td>\n",
+       "      <td>2074</td>\n",
+       "      <td>公館</td>\n",
+       "      <td>121.534377</td>\n",
+       "      <td>25.014509</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4924</th>\n",
+       "      <td>2020</td>\n",
+       "      <td>2019-12-31</td>\n",
+       "      <td>22</td>\n",
+       "      <td>公館</td>\n",
+       "      <td>2731</td>\n",
+       "      <td>公館</td>\n",
+       "      <td>121.534377</td>\n",
+       "      <td>25.014509</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5071</th>\n",
+       "      <td>2024</td>\n",
+       "      <td>2023-12-31</td>\n",
+       "      <td>22</td>\n",
+       "      <td>公館</td>\n",
+       "      <td>1337</td>\n",
+       "      <td>公館</td>\n",
+       "      <td>121.534377</td>\n",
+       "      <td>25.014509</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5178</th>\n",
+       "      <td>2023</td>\n",
+       "      <td>2022-12-31</td>\n",
+       "      <td>22</td>\n",
+       "      <td>公館</td>\n",
+       "      <td>1446</td>\n",
+       "      <td>公館</td>\n",
+       "      <td>121.534377</td>\n",
+       "      <td>25.014509</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5296</th>\n",
+       "      <td>2018</td>\n",
+       "      <td>2017-12-31</td>\n",
+       "      <td>22</td>\n",
+       "      <td>公館</td>\n",
+       "      <td>2046</td>\n",
+       "      <td>公館</td>\n",
+       "      <td>121.534377</td>\n",
+       "      <td>25.014509</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5462</th>\n",
+       "      <td>2022</td>\n",
+       "      <td>2021-12-31</td>\n",
+       "      <td>22</td>\n",
+       "      <td>公館</td>\n",
+       "      <td>1459</td>\n",
+       "      <td>公館</td>\n",
+       "      <td>121.534377</td>\n",
+       "      <td>25.014509</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5545</th>\n",
+       "      <td>2019</td>\n",
+       "      <td>2018-12-31</td>\n",
+       "      <td>22</td>\n",
+       "      <td>公館</td>\n",
+       "      <td>2116</td>\n",
+       "      <td>公館</td>\n",
+       "      <td>121.534377</td>\n",
+       "      <td>25.014509</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      year          日期  時段  進站    人次 exit          經度         緯度\n",
+       "4809  2021  2020-12-31  22  公館  2074   公館  121.534377  25.014509\n",
+       "4924  2020  2019-12-31  22  公館  2731   公館  121.534377  25.014509\n",
+       "5071  2024  2023-12-31  22  公館  1337   公館  121.534377  25.014509\n",
+       "5178  2023  2022-12-31  22  公館  1446   公館  121.534377  25.014509\n",
+       "5296  2018  2017-12-31  22  公館  2046   公館  121.534377  25.014509\n",
+       "5462  2022  2021-12-31  22  公館  1459   公館  121.534377  25.014509\n",
+       "5545  2019  2018-12-31  22  公館  2116   公館  121.534377  25.014509"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "MRT_sum_with_coord.query(\"(`時段` == 22) & (`進站` == '公館')\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "MRT_sum_with_coord.to_csv(\"./DATA/MRT_sum_with_coord_contain_22-05.csv\", index=False)"
    ]
   },
   {
