--- a/sandbox.ipynb
+++ b/sandbox.ipynb
@@ -1587,6 +1587,15 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
    "outputs": [
@@ -1777,7 +1786,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -1813,104 +1822,155 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>4809</th>\n",
-       "      <td>2021</td>\n",
-       "      <td>2020-12-31</td>\n",
-       "      <td>22</td>\n",
-       "      <td>公館</td>\n",
-       "      <td>2074</td>\n",
-       "      <td>公館</td>\n",
-       "      <td>121.534377</td>\n",
-       "      <td>25.014509</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4924</th>\n",
-       "      <td>2020</td>\n",
-       "      <td>2019-12-31</td>\n",
-       "      <td>22</td>\n",
-       "      <td>公館</td>\n",
-       "      <td>2731</td>\n",
-       "      <td>公館</td>\n",
-       "      <td>121.534377</td>\n",
-       "      <td>25.014509</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5071</th>\n",
-       "      <td>2024</td>\n",
-       "      <td>2023-12-31</td>\n",
-       "      <td>22</td>\n",
-       "      <td>公館</td>\n",
-       "      <td>1337</td>\n",
-       "      <td>公館</td>\n",
-       "      <td>121.534377</td>\n",
-       "      <td>25.014509</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5178</th>\n",
-       "      <td>2023</td>\n",
-       "      <td>2022-12-31</td>\n",
-       "      <td>22</td>\n",
-       "      <td>公館</td>\n",
-       "      <td>1446</td>\n",
-       "      <td>公館</td>\n",
-       "      <td>121.534377</td>\n",
-       "      <td>25.014509</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5296</th>\n",
-       "      <td>2018</td>\n",
+       "      <th>5120</th>\n",
+       "      <td>2017</td>\n",
        "      <td>2017-12-31</td>\n",
        "      <td>22</td>\n",
-       "      <td>公館</td>\n",
-       "      <td>2046</td>\n",
-       "      <td>公館</td>\n",
-       "      <td>121.534377</td>\n",
-       "      <td>25.014509</td>\n",
+       "      <td>七張</td>\n",
+       "      <td>657</td>\n",
+       "      <td>七張</td>\n",
+       "      <td>121.543068</td>\n",
+       "      <td>24.975025</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>5462</th>\n",
-       "      <td>2022</td>\n",
-       "      <td>2021-12-31</td>\n",
+       "      <th>5250</th>\n",
+       "      <td>2017</td>\n",
+       "      <td>2017-12-31</td>\n",
        "      <td>22</td>\n",
-       "      <td>公館</td>\n",
-       "      <td>1459</td>\n",
-       "      <td>公館</td>\n",
-       "      <td>121.534377</td>\n",
-       "      <td>25.014509</td>\n",
+       "      <td>台電大樓</td>\n",
+       "      <td>1339</td>\n",
+       "      <td>台電大樓</td>\n",
+       "      <td>121.528577</td>\n",
+       "      <td>25.019620</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>5545</th>\n",
-       "      <td>2019</td>\n",
-       "      <td>2018-12-31</td>\n",
+       "      <th>5251</th>\n",
+       "      <td>2017</td>\n",
+       "      <td>2017-12-31</td>\n",
        "      <td>22</td>\n",
-       "      <td>公館</td>\n",
-       "      <td>2116</td>\n",
-       "      <td>公館</td>\n",
-       "      <td>121.534377</td>\n",
-       "      <td>25.014509</td>\n",
+       "      <td>唭哩岸</td>\n",
+       "      <td>234</td>\n",
+       "      <td>唭哩岸</td>\n",
+       "      <td>121.506918</td>\n",
+       "      <td>25.120709</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5252</th>\n",
+       "      <td>2017</td>\n",
+       "      <td>2017-12-31</td>\n",
+       "      <td>22</td>\n",
+       "      <td>善導寺</td>\n",
+       "      <td>1070</td>\n",
+       "      <td>善導寺</td>\n",
+       "      <td>121.523009</td>\n",
+       "      <td>25.045097</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5253</th>\n",
+       "      <td>2017</td>\n",
+       "      <td>2017-12-31</td>\n",
+       "      <td>22</td>\n",
+       "      <td>國父紀念館</td>\n",
+       "      <td>2368</td>\n",
+       "      <td>國父紀念館</td>\n",
+       "      <td>121.556663</td>\n",
+       "      <td>25.041838</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5782</th>\n",
+       "      <td>2017</td>\n",
+       "      <td>2017-12-31</td>\n",
+       "      <td>23</td>\n",
+       "      <td>關渡</td>\n",
+       "      <td>198</td>\n",
+       "      <td>關渡</td>\n",
+       "      <td>121.467215</td>\n",
+       "      <td>25.125431</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5783</th>\n",
+       "      <td>2017</td>\n",
+       "      <td>2017-12-31</td>\n",
+       "      <td>23</td>\n",
+       "      <td>迴龍</td>\n",
+       "      <td>502</td>\n",
+       "      <td>迴龍</td>\n",
+       "      <td>121.411269</td>\n",
+       "      <td>25.021821</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5784</th>\n",
+       "      <td>2017</td>\n",
+       "      <td>2017-12-31</td>\n",
+       "      <td>23</td>\n",
+       "      <td>辛亥</td>\n",
+       "      <td>203</td>\n",
+       "      <td>辛亥</td>\n",
+       "      <td>121.557021</td>\n",
+       "      <td>25.005119</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5785</th>\n",
+       "      <td>2017</td>\n",
+       "      <td>2017-12-31</td>\n",
+       "      <td>23</td>\n",
+       "      <td>輔大</td>\n",
+       "      <td>381</td>\n",
+       "      <td>輔大</td>\n",
+       "      <td>121.435264</td>\n",
+       "      <td>25.032932</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5786</th>\n",
+       "      <td>2017</td>\n",
+       "      <td>2017-12-31</td>\n",
+       "      <td>23</td>\n",
+       "      <td>龍山寺</td>\n",
+       "      <td>1173</td>\n",
+       "      <td>龍山寺</td>\n",
+       "      <td>121.499530</td>\n",
+       "      <td>25.035484</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
+       "<p>216 rows × 8 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "      year          日期  時段  進站    人次 exit          經度         緯度\n",
-       "4809  2021  2020-12-31  22  公館  2074   公館  121.534377  25.014509\n",
-       "4924  2020  2019-12-31  22  公館  2731   公館  121.534377  25.014509\n",
-       "5071  2024  2023-12-31  22  公館  1337   公館  121.534377  25.014509\n",
-       "5178  2023  2022-12-31  22  公館  1446   公館  121.534377  25.014509\n",
-       "5296  2018  2017-12-31  22  公館  2046   公館  121.534377  25.014509\n",
-       "5462  2022  2021-12-31  22  公館  1459   公館  121.534377  25.014509\n",
-       "5545  2019  2018-12-31  22  公館  2116   公館  121.534377  25.014509"
+       "      year          日期  時段     進站    人次   exit          經度         緯度\n",
+       "5120  2017  2017-12-31  22     七張   657     七張  121.543068  24.975025\n",
+       "5250  2017  2017-12-31  22   台電大樓  1339   台電大樓  121.528577  25.019620\n",
+       "5251  2017  2017-12-31  22    唭哩岸   234    唭哩岸  121.506918  25.120709\n",
+       "5252  2017  2017-12-31  22    善導寺  1070    善導寺  121.523009  25.045097\n",
+       "5253  2017  2017-12-31  22  國父紀念館  2368  國父紀念館  121.556663  25.041838\n",
+       "...    ...         ...  ..    ...   ...    ...         ...        ...\n",
+       "5782  2017  2017-12-31  23     關渡   198     關渡  121.467215  25.125431\n",
+       "5783  2017  2017-12-31  23     迴龍   502     迴龍  121.411269  25.021821\n",
+       "5784  2017  2017-12-31  23     辛亥   203     辛亥  121.557021  25.005119\n",
+       "5785  2017  2017-12-31  23     輔大   381     輔大  121.435264  25.032932\n",
+       "5786  2017  2017-12-31  23    龍山寺  1173    龍山寺  121.499530  25.035484\n",
+       "\n",
+       "[216 rows x 8 columns]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "MRT_sum_with_coord.query(\"(`時段` == 22) & (`進站` == '公館')\")"
+    "MRT_sum_with_coord.query(\"year == 2017\")"
    ]
   },
   {
